# openrelik-agents-adk

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yaml
agents/dfir_multi_agent/: agent.py  description.md  instructions.md  utils.py
agents/dfir_multi_agent/sub_agents/forensic_analyst/: agent.py  description.md  instructions.md
agents/dfir_multi_agent/tools/: common.py
